--- a/mTV/mTV/Views/Main.storyboard
+++ b/mTV/mTV/Views/Main.storyboard
@@ -331,7 +331,7 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieDetailCustomCell" rowHeight="217" id="XUl-Xg-rKG" customClass="MovieDetailCustomCell" customModule="mTV" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="MovieDetailCustomCell" rowHeight="217" id="XUl-Xg-rKG" customClass="MovieDetailCustomCell" customModule="mTV" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="217"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="XUl-Xg-rKG" id="p8J-BV-jg8">
